# openclaw-local-agent-runtime

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .task_prompt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  NOTICE  README.md  SESSION-HANDOFF.md  SPRINT-10-TASK-BREAKDOWN.md  SPRINT-11-TASK-BREAKDOWN.md  backend-coverage.json  backend-tests.json  decisions.json  docker-compose.prod.yml  docker-compose.yml  frontend-coverage.json  frontend-tests.json  package-lock.json  package.json  phase.json  playwright.config.ts
agent/: agent-config.json  oc-agent-runner.py  oc_agent_runner_lib.py  pyproject.toml  requirements-dev.txt  requirements.txt  telegram_bot.py  test_sprint_5c.py  test_sprint_6d.py
agent/api/: agents_api.py  alerts_api.py  allowlist_api.py  approval_api.py  approval_mutation_api.py  artifacts_api.py  audit_export_api.py  auth_api.py  backup_api.py  cache.py  capabilities.py  circuit_breaker.py  cost_api.py  csrf_middleware.py  dashboard_api.py  dlq_api.py  error_envelope.py  features_api.py  file_watcher.py  health_api.py  idempotency.py  knowledge_api.py  logs_api.py  metrics_api.py  mission_api.py  mission_create_api.py  mission_mutation_api.py  mutation_audit.py  mutation_bridge.py  normalizer.py  plugins_api.py  policy_api.py  project_api.py  recovery_api.py  replay_api.py  retention_api.py  roles_api.py  schedules_api.py  schemas.py  secret_rotation_api.py  (+10 more)
agent/app/: __init__.py  factory.py
agent/artifacts/: schema_validator.py
agent/auth/: __init__.py  isolation.py  keys.py  (+7 more)
(+881 files in other folders)
