[project]
name = "vezir-backend"
version = "0.14.0"
description = "Vezir Platform — governed multi-agent mission backend"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled separately

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
